implemented email verification and changed db driver to pgx
